--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.0",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
